--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:tim_rehm@brown.edu">email</a></li>
-	        		<li><a href="https://github.com/timrehm">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/timrehm">github.com/timrehm</a></li>
 				</ul>
 			</footer>
 		</body>
